--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -193,12 +193,12 @@ header {
   display: inline-block;
   font-size: 18px;
   font-family: open_sans_bold;
-  display: none; }
+  display: none !important; }
   .sidebar_close:hover {
     background: #666; }
   @media screen and (max-width: 768px) {
     .sidebar_close {
-      display: inline-block; } }
+      display: inline-block !important; } }
 
 #sidebartoggle {
   display: none; }
